--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
 	<title>Jargo</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<!-- <link rel="stylesheet" href="./js/lib/jqm/jquery.mobile-1.3.1.css" /> -->
